code/resources/css/style.css
*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* Color palette based on the logo

From darker to lighter: 

#FC5424
#FC6434
#FC6C3C
#FC774B
#FC8454
#FCAC8C
#FC9270
#FCAC94
#FCDDD2 

Contrast color 

#B7448E

*/

/* ----------------------------------------------- */
/*                GLOBAL COMPONENTS                */
/* ----------------------------------------------- */


html, body {
  background-color: #fff;
  font-family: 'Copse', 'Arial', sans-serif;
  font-size: 1.3vw;
}

/* ----------------------------------------------- */
/*                    GLOBAL CONTAINER             */
/* ----------------------------------------------- */

/*Contains the sections: Header, Featured News, About Us, Footer*/

.global-container {
  padding: 3%;
}

/* ----------------------------------------------- */
/*                REUSABLE COMPONENTS              */
/* ----------------------------------------------- */

/* ----- BUTTONS ----- */

.cta-button {
  background-color: #FC6C3C; 
  color:#FCDDD2;
  font-size: 1.1vw;
  border-radius: 200px;
  padding: 1.5%;
  margin-top: 1%;
}

.cta-button:hover {
  box-shadow: 8px 8px #B7448E;
  transition: .3s;
}

/* ----------------------------------------------- */
/*                    HEADINGS                     */
/* ----------------------------------------------- */

h1 {
  font-family: 'Amaranth', 'Arial', cursive;
  color: #FC9270;
  font-size: 5vw;
}

h2 {
  color: #FC6424;
  font-size: 2vw;
  margin-bottom: 1%;
}

h3 {
  color: #FC6434;
  font-size: 1.5vw;
}

.header-subtitle {
  color:#FCDDD2;
}



/* ----------------------------------------------- */
/*                    HEADER                       */
/* ----------------------------------------------- */

 .hero-container {
  background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/hero-img.jpg);
  background-size: cover;
  background-position: center center;
  background-attachment: fixed;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
 } 

  .logo-transparent {
  height: 10vw;
  width: auto;
  float: left;
  }

  .nav-bar {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
  }
  
  .main-nav li {
  list-style-type: none;
  display: inline-block;
  padding: 15px 15px;
  }
  
  a {
  text-decoration: none;
  color: #FC5424;
  } 

  a:hover {
  color: #B7448E;
  }
  
  /* ----------------------------------------------- */
  /*                  MAIN NEWS                      */
  /* ----------------------------------------------- */
 	  
    .main-news-container {
    display: flex;
    flex-direction: row;
    margin-top: 3%;
    padding: 8%;
    background-color: #f4f4f4;
  }
    
    .main-news-img {
    max-width: 100%;
    height: auto;
    }
    
    .main-news-contents {
    margin-left: 3%;
    } 

    .main-subtitle {
      margin-bottom: 2%;
      color: #FC774B;
    }

    .read-more-link {
      font-size: 80%;
    }
  
  /* ----------------------------------------------- */
  /*                  FEATURED NEWS                  */
  /* ----------------------------------------------- */
 	  
  .featured-news-container {
  margin-top: 3%;
  width: 100%;
  background-color: #f4f4f4;
  padding: 8%;
  }
  
  .grid {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
  grid-gap: 30px;
  align-items: stretch;
  
  }
  
  .grid > article {
    border: 1px solid #ccc;
    background-color: #fff;
    box-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 0.3);
    transition: .5s ease;
  }

  .grid > article:hover {
    box-shadow: 0 0 0 10px #B7448E;
    transition: ease;
  }
  
  .grid > article img {
  max-width: 100%;
  }
  
  .grid .text {
  padding: 5%;
  margin: 1%;
  }
  
  .featured-image {
  max-width: 100%;
  height: auto;
  }
  
  article {
  padding: 8% 6%;
  } 
  
  /* ----------------------------------------------- */
  /*                  FOOTER                         */
  /* ----------------------------------------------- */
  
  .footer-container {
  background-color: #5a5858;
  color: rgb(184, 178, 178);
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
  padding: 80px 30px;
  }
  
  .footer-list {
  list-style: none; 
  }
  
  .footer-list-item {
  margin: 20px;
  text-align: end;
  }
  
  .social-icon {
  font-size: 40px;
  margin: 0 6px;
  color: rgb(184, 178, 178);
  }
  
  .author-email {
  color: rgb(184, 178, 178);
  }


/* ----------------------------------------------- */
/*                  MEDIA QUERIES                  */
/* ----------------------------------------------- */



/* Mobile */

@media only screen and (max-width: 414px /*For iPhone6/7/8 Plus*/ ) { 

  .hero-container {
    height: 70vh;
  }
/* 
  .grid {
    grid-template-columns: 1fr;
     grid-template-rows: repeat(8, 1fr); } */

  .footer-list {
   text-align: start;
 }
}

/* Big Tablets - iPad Pro*/

@media only screen and (max-width: 1024px) {

.main-news-container {
  flex-wrap: wrap;
  justify-content: center;
}

.main-news-contents {
  margin-left: 0;
  padding: 3% 9%;
  } 

}


/* Small Tablets */

@media only screen and (max-width: 768px) {

  h2, h3 {
    margin-top: 3%;
  }

  .nav-bar {
    display: none;
  }

  .hero-container {
    background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/zbynek-burival-1kGvoC9g2DY-unsplash.jpg);
  }
 
  .main-news-contents {
    margin-left: 0;
    padding: 0;
    } 
  
  /* .grid {
    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));  
  }  */

   .footer-list {
    text-align: start;
  }
 
  .footer-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    }

  .footer-list-item:nth-child(2),   
  .footer-list-item:last-child {
    text-align: center;
  }

  .logo-transparent {
    height: 100px;
  }

  .social-icon {
    font-size: 20px;
  }

}

